change the expense update method
